--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/icon-calculate.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -15,32 +16,46 @@
   <!-- calculator background -->
   <!-- calculator-body -->
   <div class="calculator-body">
-    <input class="display" type="text" >
+    <input class="display" type="text" disabled>
     <div class="c-and-ce">
       <ul class="list-c-and-ce">
-        <li>
-          <button>C</button>
-        </li>
-        <li>
-          <button>CE</button>
-        </li>
+        <li><button>C</button></li>
+        <li><button>CE</button></li>
       </ul>
     </div>
     <div class="complex-numbers">
       <ul class="list-complex-numbers">
-        <li>
-          <button>x²</button>
-        </li>
-        <li>
-          <button>√</button>
-        </li>
-        <li>
-          <button>%</button>
-        </li>
-        <li>
-          <button>^</button>
-        </li>
+        <li><button>x²</button></li>
+        <li><button>√</button></li>
+        <li><button>%</button></li>
+        <li><button>^</button></li>
       </ul>
+    </div>
+    <div class="numbers-operations">
+      <div class="normal-numbers">
+        <ul class="list-normal-numbers">
+          <li><button>7</button></li>
+          <li><button>8</button></li>
+          <li><button>9</button></li>
+          <li><button>4</button></li>
+          <li><button>5</button></li>
+          <li><button>6</button></li>
+          <li><button>1</button></li>
+          <li><button>2</button></li>
+          <li><button>3</button></li>
+          <li><button>0</button></li>
+          <li><button>.</button></li>
+          <li><button>=</button></li>
+        </ul>
+      </div>
+      <div class="operations">
+        <ul class="list-operations">
+          <li><button>x</button></li>
+          <li><button>/</button></li>
+          <li><button>-</button></li>
+          <li><button>+</button></li>
+        </ul>
+      </div>
     </div>
   </div>
   <!-- calculator-body -->
